[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/AncestorSatelliteNest.gd" type="Script" id=1]
[ext_resource path="res://Entities/EggTimer.gd" type="Script" id=2]

[node name="AncestorSatelliteNest" type="Node2D" groups=[
"Arena",
]]
z_index = 3
script = ExtResource( 1 )

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="ShakeTween" type="Tween" parent="."]

[node name="ShakeTimer" type="Timer" parent="ShakeTween"]
wait_time = 0.2
one_shot = true

[node name="VisibilityTween" type="Tween" parent="."]

[node name="EggTimer" type="Node2D" parent="."]
position = Vector2( -64, -64 )
script = ExtResource( 2 )
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="ShakeTween/ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
